Added cursor on work

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -250,7 +250,9 @@ h1.stroke {
     color:  rgba(0,0,0,0);
     text-align: left;
     font-size: 1em;
+    cursor: pointer;
   }
+
   a {
     text-decoration: none;
   }
